--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@chakra-ui/react": "^1.6.10",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@types/node-cron": "^3.0.0",
     "axios": "^0.23.0",
     "framer-motion": "^4",
     "next": "11.1.2",
+    "node-cron": "^3.0.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-schedule-job": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "17.0.32",
